--- a/_css/style.css
+++ b/_css/style.css
@@ -8,7 +8,9 @@
     06. row menu;
     07. coffee image;
     08. where find;
-    
+    09. contact form;
+    10. footer;
+    11. media queries.
 */
 
 /************* 01. Reused configurations ************
